[tool.poetry]
name = "mse-408"
version = "0.1.0"
description = "NN for Committor Function"
authors = ["Daniel Jenson <daniel.a.jenson@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.4"
torch = "^1.13.0"
pytorch-lightning = "^1.7.7"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
