[tool.poetry]
name = "gfn-post"
version = "0.1.0"
description = "GFN for Calculating Posterior"
authors = ["Daniel Jenson <daniel.a.jenson@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.4"
pytorch-lightning = "^1.8.0"
torch = "^1.13.0"
scipy = "^1.9.3"


[tool.poetry.dev-dependencies]
pytest = "^7.2.0"

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
